--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Design System Updates</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Inter, sans-serif;
             line-height: 1.6;
             color: #333;
             max-width: 800px;
