Updated Action & Hook

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         text-decoration: none;
       }
       .update {
-        background-color: #111;
+        background-color: #1a1a1a;
         border-radius: 16px;
         padding: 32px 24px;
         margin-bottom: 20px;
